# osrulm

./: CMakeLists.txt  Install.md  OSimTrial.cpp  README.md  processChartFile.drawio
code and data/: ExtForce.xml  ExtForce_elbow.xml  OSimTrial.cpp  readMe.txt
code and data/MATLAB files generate Joint coordinate/: ExportKinAndForceSTOFiles.m  ISB7DofUL.m  Jerk.m  read_me
code and data/Python file for deweighting force generation/: README.md
code and data/Python file for deweighting force generation/isbulmodel/: ISBUL.py  Jerk.py  OpenSIMMoBLARMSUtils.py
code and data/force and joint coordinate/: UpAndStopAndDown0.7s_JointsKin.sto  UpAndStopAndDown0.7s_NoForceLoad.sto  UpAndStopAndDown1s_JointsKin.sto  arm_flexsion_1s_ConstForceLoad_elbow.sto  arm_flexsion_1s_DeweighttForceLoad.sto  arm_flextion_constForce
data/input/: ExtForce.xml  ExtForce_elbow.xml  arm_flexsion_1s_ConstForceLoad.sto  arm_flexsion_1s_NoForceLoad.sto
result data/: readme
result data/static/elbow flexion/: readme
result data/static/elbow flexion/No gravity no external force/: analyze_MuscleAnalysis_ActiveFiberForce.sto
result data/static/elbow flexion/With gravity No external force/: analyze_MuscleAnalysis_ActiveFiberForce_wrist_deweight.sto
result data/static/elbow flexion/With gravity with external force/: analyze_MuscleAnalysis_ActiveFiberForce_elbow_force.sto
scripts/MATLAB/: ExportKinAndForceSTOFiles.m  ISB7DofUL.m
scripts/python/: deweighting_force_calculation.py
scripts/python/isbulmodel/: Deweighting.py  __init__.py
src/: OSimTrial.cpp  readMe.txt
